--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <div class="modal_block  modal_block_false">
+    <div class="modal_block  ">
         <div class="box">
             <div class="block1 modal_block_active" id="modal_block1">
                 <h2>Войти</h2>
