--- a/pages/my_photo.html
+++ b/pages/my_photo.html
@@ -25,8 +25,8 @@
                 </form>
                 <div class="links">
                     <a href="/pages/photo.html">Photo</a>
-                    <a href="">my photo</a>
-                    <a href="">add photo</a>
+                    <a href="/pages/my_photo.html">my photo</a>
+                    <a href="/pages/add_photo.html">add photo</a>
 
                 </div>
                 <div class="user">
