--- a/pages/add_photo.html
+++ b/pages/add_photo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +7,7 @@
     <link rel="stylesheet" href="/scss/add_photo.css">
     <title>FaceStud</title>
 </head>
-
 <body>
-
-
     <header>
         <div class="cont">
             <div class="block">
@@ -24,9 +20,8 @@
                 </form>
                 <div class="links">
                     <a href="/pages/photo.html">Photo</a>
-                    <a href="">my photo</a>
-                    <a href="">add photo</a>
-
+                    <a href="/pages/my_photo.html">my photo</a>
+                    <a href="/pages/add_photo.html">add photo</a>
                 </div>
                 <div class="user">
                     <img src="/img/user.png" alt="">
@@ -34,14 +29,11 @@
             </div>
         </div>
     </header>
-
     <main>
-
         <div class="cont">
             <div class="box">
                 <div class="absalute_block">
                     <img src="/img/photo.jfif" alt="">
-
                 </div>
                 <div class="block">
                     <img src="/img/photo_user.png" alt="">
@@ -56,16 +48,8 @@
                 </div>
             </div>
         </div>
-
     </main>
-
-
-    <footer>
-
-    </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/add_photo.js"></script>
 </body>
-
 </html>
