--- a/pages/photo.html
+++ b/pages/photo.html
@@ -25,8 +25,9 @@
                     <button><img src="/img/search.svg" alt=""></button>
                 </form>
                 <div class="links">
-                    <a href="">Photo</a>
-                    <a href="">Video</a>
+                    <a href="/pages/photo.html">Photo</a>
+                    <a href="/pages/my_photo.html">my photo</a>
+                    <a href="/pages/add_photo.html">add photo</a>
 
                 </div>
                 <div class="user">
@@ -48,7 +49,7 @@
                         <div class="swiper-slide"><img src="/img/photo.jfif" alt=""></div>
                     </div>
                 </div>
-                
+
             </div>
 
         </section>
